Progress on my page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello World
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Github Page</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="#ex">Mes expériences Professionnelles</a>
+            <a href="#skills">Mes compétences</a>
+        </nav>
+        <img src="https://source.unsplash.com/random/200x200" alt="Ma photo">
+
+        <h1>Erwin Dupont |
+            
+            <strong>Developpeur Junior</strong></h1>
+
+        Contact:
+        Tel: <a href="tel:+06645451">06645451</a>
+        Email: <a href="mailto:test@oclock.io">test@oclock.io</a>
+    </header>
+
+    <main>
+
+        <section>
+            <h2 id="#ex"> Mes expériences Professionnelles</h2>
+
+            <article>
+                <ul><li> 4 stages en formation de techniciens géomètre topographe</li>
+                    <img src="https://f.hellowork.com/obs-static-images/seo/ObsJob/technicien-geometre.jpg" alt="Géomètre topographe">
+                <li> 1 stage dans le service de "SIG" Système d'informations Géographique de l'entreprise "Eau de Paris"</li></ul>
+            </article>
+
+            <h2 id="#skills">Mes compétences</h2>
+            <ul>
+                <li>Github <progress>100%</progress></li>
+                <li>Markdown <progress>100%</progress> </li>
+                <li>HTML <progress> value="80%" max="100%"</progress> </li>
+            </ul>
+        </section>
+    </main>
+</body>
+</html>
